--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -60,15 +60,18 @@ p {
   .name {
     font-size: 32px;
     font-weight: 900;
-    margin-top: 0;
-    margin-bottom: 10px;
+    margin: 0;
   }
   .tagline {
     color: rgba(256, 256, 256, 0.6);
     font-size: 16px;
     font-weight: 400;
-    margin-top: 0;
+    margin-top: 10px;
     margin-bottom: 0;
+  }
+  .pronouns {
+    margin: 0;
+    font-size: 14px;
   }
   .profile {
     margin-bottom: 15px;
@@ -78,7 +81,7 @@ p {
     //used for profile image
     max-width: 100px;
     margin-bottom: 15px;
-    border: 0px solid #fff;
+    border: 0 solid #fff;
     border-radius: 100%;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   }
@@ -122,13 +125,13 @@ p {
     .meta {
       color: rgba(256, 256, 256, 0.6);
       font-weight: 500;
-      margin-bottom: 0px;
+      margin-bottom: 0;
       margin-top: 0;
     }
     .time {
       color: rgba(256, 256, 256, 0.6);
       font-weight: 500;
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
   }
   .languages-container {
